kotlin/semlang-parser/src/test/semlang/validatorTests/fail/threadedStructs1.sem
// Threaded structs must indicate themselves with ~
struct StringBuilder {
  listBuilder: ~ListBuilder<Unicode.String>
}
